--- a/pub/.htaccess
+++ b/pub/.htaccess
@@ -1,7 +1,7 @@
 ############################################
 ## Optional override of deployment mode. We recommend you use the
 ## command bin/magento deploy:mode:set to switch modes instead
-
+test test
 # Options are default, production, or developer
 #   SetEnv MAGE_MODE default
 
