--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.DEV_SSH_KEY }}
+          ssh-private-key: ${{ secrets.DEV_SSH_KEY_01 }}
 
       - name: Pull latest code on server
         run: |
