--- a/.github/workflows/deploy-master.yml
+++ b/.github/workflows/deploy-master.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Start ssh-agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.MASTER_SSH_KEY_01 }}
+          ssh-private-key: ${{ secrets.DEV_SSH_KEY_01 }}
 
       - name: Add server to known_hosts
         run: |
